Bug 477425 - Crash in UpdateItemStatesThread::run
Summary: Crash in UpdateItemStatesThread::run
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.1
Platform: Fedora RPMs Linux
: VHI crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: drkonqi
: 432442 453174 453430 454290 457070 466445 466978 470569 473379 473508 480663 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-23 15:57 UTC by Henning
Modified: 2024-03-24 11:10 UTC (History)
17 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (16.17 KB, text/plain)
2023-11-24 07:17 UTC, idraj.92
Details
recent crash with 23.08.1 and all the dbg packages (23.29 KB, text/vnd.kde.kcrash-report)
2024-03-22 11:34 UTC, Daniele Scasciafratte
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Henning 2023-11-23 15:57:59 UTC
Application: dolphin (23.08.1)

Qt Version: 5.15.10
Frameworks Version: 5.110.0
Operating System: Linux 6.5.6-300.fc39.x86_64 x86_64
Windowing System: Wayland
Distribution: Fedora Linux 39 (Kinoite)
DrKonqi: 5.27.8 [KCrashBackend]

-- Information about the crash:
I have no idea what I did.

It just crashes randomly. I am just writing text here to fulfill the need, I linked the previous issue

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f0591f88180 in QArrayData::shared_null () from /lib64/libQt5Core.so.5
#5  0x00007f0594181efa in UpdateItemStatesThread::run() () from /lib64/libdolphinprivate.so.5
#6  0x00007f0591cf5a4d in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#7  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#8  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 10 (Thread 0x7f053d7fa6c0 (LWP 2570) "KDirectoryConte"):
#1  0x00007f058fb6dd14 in g_main_context_iterate_unlocked.isra () from /lib64/libglib-2.0.so.0
#2  0x00007f058fb10a93 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007f0591f06776 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#4  0x00007f0591eb2bdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#5  0x00007f0591cf4640 in QThread::exec() () from /lib64/libQt5Core.so.5
#6  0x00007f0591cf5a4d in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#7  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#8  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 9 (Thread 0x7f0564bfc6c0 (LWP 2473) "dolphin"):
#1  0x00007f058f8dfeac in usbmuxd_listen_inotify () from /lib64/libusbmuxd-2.0.so.6
#2  0x00007f058f8e0312 in device_monitor () from /lib64/libusbmuxd-2.0.so.6
#3  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#4  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 8 (Thread 0x7f05653fd6c0 (LWP 2437) "dolphin:shlo0"):
#1  0x00007f05916abb09 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f056db6abfd in cnd_wait () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f056db1962b in util_queue_thread_func () from /usr/lib64/dri/radeonsi_dri.so
#4  0x00007f056db6ab2c in impl_thrd_routine () from /usr/lib64/dri/radeonsi_dri.so
#5  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#6  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 7 (Thread 0x7f0565bfe6c0 (LWP 2436) "dolphin:sh0"):
#1  0x00007f05916abb09 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f056db6abfd in cnd_wait () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f056db1962b in util_queue_thread_func () from /usr/lib64/dri/radeonsi_dri.so
#4  0x00007f056db6ab2c in impl_thrd_routine () from /usr/lib64/dri/radeonsi_dri.so
#5  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#6  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 6 (Thread 0x7f05663ff6c0 (LWP 2433) "dolphin:disk$0"):
#1  0x00007f05916abb09 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f056db6abfd in cnd_wait () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f056db1962b in util_queue_thread_func () from /usr/lib64/dri/radeonsi_dri.so
#4  0x00007f056db6ab2c in impl_thrd_routine () from /usr/lib64/dri/radeonsi_dri.so
#5  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#6  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 5 (Thread 0x7f057ceca6c0 (LWP 2431) "dolphin:cs0"):
#1  0x00007f05916abb09 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f056db6abfd in cnd_wait () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f056db1962b in util_queue_thread_func () from /usr/lib64/dri/radeonsi_dri.so
#4  0x00007f056db6ab2c in impl_thrd_routine () from /usr/lib64/dri/radeonsi_dri.so
#5  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#6  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 4 (Thread 0x7f057d84a6c0 (LWP 2398) "WaylandEventThr"):
#1  0x00007f058f326d1c in QtWaylandClient::EventThread::run() () from /lib64/libQt5WaylandClient.so.5
#2  0x00007f0591cf5a4d in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#3  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#4  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 3 (Thread 0x7f057e04b6c0 (LWP 2397) "WaylandEventThr"):
#1  0x00007f05916abb09 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f0591cfb707 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib64/libQt5Core.so.5
#3  0x00007f058f326cc9 in QtWaylandClient::EventThread::run() () from /lib64/libQt5WaylandClient.so.5
#4  0x00007f0591cf5a4d in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#5  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#6  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 2 (Thread 0x7f057e9ff6c0 (LWP 2392) "QDBusConnection"):
#1  0x00007f058fb6dd14 in g_main_context_iterate_unlocked.isra () from /lib64/libglib-2.0.so.0
#2  0x00007f058fb10a93 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007f0591f06776 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#4  0x00007f0591eb2bdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#5  0x00007f0591cf4640 in QThread::exec() () from /lib64/libQt5Core.so.5
#6  0x00007f059320adab in QDBusConnectionManager::run() () from /lib64/libQt5DBus.so.5
#7  0x00007f0591cf5a4d in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#8  0x00007f05916ac897 in start_thread () from /lib64/libc.so.6
#9  0x00007f05917336bc in clone3 () from /lib64/libc.so.6

Thread 1 (Thread 0x7f058c1c7a00 (LWP 2284) "dolphin"):
#1  0x00007f0592baebb0 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#2  0x00007f0591eb4218 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#3  0x00007f0591eb76c5 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib64/libQt5Core.so.5
#4  0x00007f0591f06c6f in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5Core.so.5
#5  0x00007f058fb12e1c in g_main_context_dispatch_unlocked.lto_priv () from /lib64/libglib-2.0.so.0
#6  0x00007f058fb6dd78 in g_main_context_iterate_unlocked.isra () from /lib64/libglib-2.0.so.0
#7  0x00007f058fb10a93 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#8  0x00007f0591f06759 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#9  0x00007f0591eb2bdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#10 0x00007f0591ebae6b in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#11 0x0000565113348055 in main ()
[Inferior 1 (process 2284) detached]

The reporter indicates this bug may be a duplicate of or related to bug 476842.

Reported using DrKonqi
Comment 1 idraj.92 2023-11-24 07:17:56 UTC
Created attachment 163414 [details]
New crash information added by DrKonqi

dolphin (23.04.2) using Qt 5.15.10

Application: Dolphin (dolphin), signal: Aborted

[KCrash Handler]
#4  0x00007fdec883e9fc in pthread_kill () from /lib/x86_64-linux-gnu/libc.so.6
#5  0x00007fdec87ea476 in raise () from /lib/x86_64-linux-gnu/libc.so.6
#6  0x00007fdec87d07f3 in abort () from /lib/x86_64-linux-gnu/libc.so.6
#7  0x00007fdec73a3ed6 in ?? () from /lib/x86_64-linux-gnu/libdbus-1.so.3
#8  0x00007fdec73ca690 in _dbus_warn_check_failed () from /lib/x86_64-linux-gnu/libdbus-1.so.3
#9  0x00007fdec9f9d7f9 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#10 0x00007fdec9f9ecb1 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#11 0x00007fdec9fa0961 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#12 0x00007fdec8eea2fe in QObject::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007fdec8ebcda7 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007fdec8ebfec7 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007fdec8f16c07 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007fdec696dd3b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#17 0x00007fdec69c3258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007fdec696b3e3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007fdec8f16258 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#20 0x00007fdec8ebb6fb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#21 0x00007fdec8ccd932 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x00007fdec9f890eb in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#23 0x00007fdec8cceba3 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#24 0x00007fdec883cac3 in ?? () from /lib/x86_64-linux-gnu/libc.so.6
#25 0x00007fdec88cea40 in ?? () from /lib/x86_64-linux-gnu/libc.so.6

Thread 1 (Thread 0x7fdeca45d9c0 (LWP 108165) "dolphin"):
#1  0x00007fdec8cd0cce in QSemaphore::acquire(int) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007fdec8ef47b3 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007fdec9f88c17 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#4  0x00007fdec9f94f6a in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#5  0x00007fdec8eeb66a in QObjectPrivate::connectImpl(QObject const*, int, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fdec8eeb9f5 in QObject::connectImpl(QObject const*, void**, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fde9473c765 in DaemonDbusInterface::DaemonDbusInterface(QObject*) () from /lib/x86_64-linux-gnu/libkdeconnectinterfaces.so.23
#8  0x00007fde9479e5c3 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kfileitemaction/kdeconnectfileitemaction.so
#9  0x00007fdecabf8115 in ?? () from /lib/x86_64-linux-gnu/libKF5KIOWidgets.so.5
#10 0x000055e03323fcce in ?? ()
#11 0x000055e03324053e in ?? ()
#12 0x000055e0332336a9 in ?? ()
#13 0x00007fdec8ef4854 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007fdecaf87128 in DolphinView::requestContextMenu(QPoint const&, KFileItem const&, KFileItemList const&, QUrl const&) () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#15 0x00007fdecaff64b5 in DolphinView::slotItemContextMenuRequested(int, QPointF const&) () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#16 0x00007fdec8ef4854 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#17 0x00007fdecaf84c6a in KItemListController::itemContextMenuRequested(int, QPointF const&) () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#18 0x00007fdecafbce85 in KItemListController::onPress(QPoint const&, QPointF const&, QFlags<Qt::KeyboardModifier>, QFlags<Qt::MouseButton>) () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#19 0x00007fdecafbd7c6 in KItemListController::mousePressEvent(QGraphicsSceneMouseEvent*, QTransform const&) () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#20 0x00007fdecafc0789 in KItemListController::processEvent(QEvent*, QTransform const&) () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#21 0x00007fdecafc5191 in KItemListView::event(QEvent*) () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#22 0x00007fdec99bc763 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#23 0x00007fdec8ebcdda in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#24 0x00007fdec9cffd75 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#25 0x00007fdec9d00131 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#26 0x00007fdec9d089ea in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#27 0x00007fdec9d12941 in QGraphicsScene::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#28 0x00007fdec99bc763 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#29 0x00007fdec8ebcdda in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#30 0x00007fdec9d305b5 in QGraphicsView::mousePressEvent(QMouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#31 0x00007fdec99ff94e in QWidget::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#32 0x00007fdec9aadcc2 in QFrame::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#33 0x00007fdec8ebcb3a in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#34 0x00007fdec99bc752 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#35 0x00007fdec99c43a4 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#36 0x00007fdec8ebcdda in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#37 0x00007fdec99c2e87 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#38 0x00007fdec9a191cb in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#39 0x00007fdec9a1c525 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#40 0x00007fdec99bc763 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#41 0x00007fdec8ebcdda in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#42 0x00007fdec92ab2f7 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#43 0x00007fdec927edbc in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#44 0x00007fdec31f6f3e in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#45 0x00007fdec696dd3b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#46 0x00007fdec69c3258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#47 0x00007fdec696b3e3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#48 0x00007fdec8f16258 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#49 0x00007fdec8ebb6fb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#50 0x00007fdec8ec3c94 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#51 0x000055e033224b35 in ?? ()
#52 0x00007fdec87d1d90 in ?? () from /lib/x86_64-linux-gnu/libc.so.6
#53 0x00007fdec87d1e40 in __libc_start_main () from /lib/x86_64-linux-gnu/libc.so.6
#54 0x000055e0332253e5 in ?? ()
[Inferior 1 (process 108165) detached]

-- Backtrace (Reduced):
#8  0x00007fdec73ca690 in _dbus_warn_check_failed () from /lib/x86_64-linux-gnu/libdbus-1.so.3
[...]
#12 0x00007fdec8eea2fe in QObject::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007fdec8ebcda7 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007fdec8ebfec7 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
[...]
#19 0x00007fdec8f16258 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
Comment 2 Méven Car 2023-11-26 14:57:35 UTC
The crash is in 

#8  0x00007fde9479e5c3 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kfileitemaction/kdeconnectfileitemaction.so

`kdeconnectfileitemaction.so` Aka kdeconnect context menu additions.
Comment 3 David Edmundson 2023-11-28 10:33:01 UTC
*** Bug 473508 has been marked as a duplicate of this bug. ***
Comment 4 David Edmundson 2023-11-28 10:33:13 UTC
*** Bug 473379 has been marked as a duplicate of this bug. ***
Comment 5 David Edmundson 2023-11-28 10:33:18 UTC
*** Bug 470569 has been marked as a duplicate of this bug. ***
Comment 6 David Edmundson 2023-11-28 10:33:24 UTC
*** Bug 466978 has been marked as a duplicate of this bug. ***
Comment 7 David Edmundson 2023-11-28 10:33:29 UTC
*** Bug 466445 has been marked as a duplicate of this bug. ***
Comment 8 David Edmundson 2023-11-28 10:33:35 UTC
*** Bug 457070 has been marked as a duplicate of this bug. ***
Comment 9 David Edmundson 2023-11-28 10:33:42 UTC
*** Bug 454290 has been marked as a duplicate of this bug. ***
Comment 10 David Edmundson 2023-11-28 10:33:52 UTC
*** Bug 453430 has been marked as a duplicate of this bug. ***
Comment 11 David Edmundson 2023-11-28 10:34:13 UTC
*** Bug 453174 has been marked as a duplicate of this bug. ***
Comment 12 David Edmundson 2023-11-28 10:34:19 UTC
*** Bug 432442 has been marked as a duplicate of this bug. ***
Comment 13 David Edmundson 2023-11-28 10:34:48 UTC
-- Backtrace:
Application: Dolphin (dolphin), signal: Bus error
Content of s_kcrashErrorMessage: {_M_t = {<std::__uniq_ptr_impl<char, std::default_delete<char []> >> = {_M_t = std::tuple containing = {[1] = 0x0, [2] = {<No data fields>}}}, <No data fields>}}
[KCrash Handler]
#6  QHashNode<QString, KVersionControlPlugin::ItemVersion>::same_key (key0=..., h0=1158673663, this=0x7f924d5b362b) at /usr/include/qt/QtCore/qhash.h:156
#7  QHash<QString, KVersionControlPlugin::ItemVersion>::findNode (this=this@entry=0x557650494c28, akey=..., h=1158673663) at /usr/include/qt/QtCore/qhash.h:931
#8  0x00007f96300cbc4a in QHash<QString, KVersionControlPlugin::ItemVersion>::findNode (ahp=0x0, akey=..., this=0x557650494c28) at /usr/include/qt/QtCore/qhash.h:950
#9  QHash<QString, KVersionControlPlugin::ItemVersion>::contains (akey=..., this=0x557650494c28) at /usr/include/qt/QtCore/qhash.h:920
#10 FileViewGitPlugin::beginRetrieval (this=0x7f95eccc5608, directory=...) at /usr/src/debug/dolphin-plugins-22.04.0/git/fileviewgitplugin.cpp:242
#11 0x00007f964180676a in UpdateItemStatesThread::run (this=0x557650336f60) at /usr/src/debug/dolphin-22.04.0/src/views/versioncontrol/updateitemstatesthread.cpp:36


best trace
Comment 14 Méven Car 2023-12-05 09:02:40 UTC
(In reply to David Edmundson from comment #13)
> -- Backtrace:
> Application: Dolphin (dolphin), signal: Bus error
> Content of s_kcrashErrorMessage: {_M_t = {<std::__uniq_ptr_impl<char,
> std::default_delete<char []> >> = {_M_t = std::tuple containing = {[1] =
> 0x0, [2] = {<No data fields>}}}, <No data fields>}}
> [KCrash Handler]
> #6  QHashNode<QString, KVersionControlPlugin::ItemVersion>::same_key
> (key0=..., h0=1158673663, this=0x7f924d5b362b) at
> /usr/include/qt/QtCore/qhash.h:156
> #7  QHash<QString, KVersionControlPlugin::ItemVersion>::findNode
> (this=this@entry=0x557650494c28, akey=..., h=1158673663) at
> /usr/include/qt/QtCore/qhash.h:931
> #8  0x00007f96300cbc4a in QHash<QString,
> KVersionControlPlugin::ItemVersion>::findNode (ahp=0x0, akey=...,
> this=0x557650494c28) at /usr/include/qt/QtCore/qhash.h:950
> #9  QHash<QString, KVersionControlPlugin::ItemVersion>::contains (akey=...,
> this=0x557650494c28) at /usr/include/qt/QtCore/qhash.h:920
> #10 FileViewGitPlugin::beginRetrieval (this=0x7f95eccc5608, directory=...)
> at /usr/src/debug/dolphin-plugins-22.04.0/git/fileviewgitplugin.cpp:242
> #11 0x00007f964180676a in UpdateItemStatesThread::run (this=0x557650336f60)
> at
> /usr/src/debug/dolphin-22.04.0/src/views/versioncontrol/
> updateitemstatesthread.cpp:36
> 
> 
> best trace

I wonder if that happens still with Qt6 since QHash impl has changed.

This trace does not match the previous one that concerned `kdeconnectfileitemaction.so`.

Some of the duplicates seem not be duplicates either.
Comment 15 Nicolas Fella 2024-02-01 13:06:51 UTC
*** Bug 480663 has been marked as a duplicate of this bug. ***
Comment 16 Daniele Scasciafratte 2024-03-22 11:34:26 UTC
Created attachment 167600 [details]
recent crash with 23.08.1 and all the dbg packages

I am getting this on debian sid with 23.08.1, ref https://new.reddit.com/r/kde/comments/1bkw01f/dolphin_crash_how_to_open_a_ticket/

I have all the dbgsym packages on my machine
Comment 17 Méven 2024-03-24 11:10:26 UTC
Git commit d270700c0ef42b6f1e1bef09bbf0bab59b3e78d1 by Méven Car.
Committed on 24/03/2024 at 10:55.
Pushed by meven into branch 'master'.

versioncontrol: Prevent a use-after-free in UpdateItemStatesThread

UpdateItemStatesThread kept a pointer reference to m_plugin whose
lifetime was tied to VersionControlObserver parents.
On application shutdown it could happen the thread is still running when
the Observer is destroyed.

Make the plugin pointer a weak reference, allowing to stop the thread
when the plugin is gone.

M  +8    -4    src/views/versioncontrol/updateitemstatesthread.cpp
M  +2    -1    src/views/versioncontrol/updateitemstatesthread.h

https://invent.kde.org/system/dolphin/-/commit/d270700c0ef42b6f1e1bef09bbf0bab59b3e78d1